# turtle-matter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  formatters.py  generate_all_tests.sh  generate_examples.sh  main.py  pyproject.toml  vocabulary.py
.devcontainer/: devcontainer.json
docs/: index.html
docs/examples/: croissant.html  croissant.md
docs/examples/croissant/inputs/docs/: DataSource.md  DataType.md  Extract.md  Format.md  Transform.md
docs/examples/croissant/outputs/: croissant-context.json  croissant-markdown.md  croissant.html
docs/examples/prov/outputs/: prov-context.json  prov-markdown.md  prov.html  prov.md
src/turtle_matter/: __init__.py  cli.py  formatters.py  vocabulary.py
src/turtle_matter/templates/: vocabulary_template.html
templates/: vocabulary_template.html
test_data/croissant/docs/: Field.md  FileObject.md  FileSet.md  RecordSet.md
test_data/croissant/outputs/: croissant-analysis.txt  croissant-context.json  croissant.html  croissant.md
