[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turtle-matter"
version = "0.1.0"
description = "Generate vocabulary documentation from RDF files"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kevin Paeth" }]
dependencies = [
    "rdflib>=7.0.0",
    "rdflib-jsonld>=0.6.2",
    "jinja2>=3.1.0",
    "python-frontmatter>=1.1.0",
    "click>=8.1.0",
    "pyld>=2.0.0",
    "markdown>=3.4.0",
]

[project.scripts]
turtle-matter = "turtle_matter.cli:main"

[project.urls]
"Homepage" = "https://github.com/kepae/turtle-matter"
"Bug Reports" = "https://github.com/kepae/turtle-matter/issues"
"Examples" = "https://kepae.github.io/turtle-matter/"

[tool.hatch.build.targets.wheel]
packages = ["src/turtle_matter"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = ["pre-commit>=4.3.0", "ruff>=0.12.9"]

[tool.ruff.lint.isort]
known-first-party = ["turtle_matter"]
